# pytest-rich

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/pytest_rich/: plugin.py
tests/: test_bar.py  test_foo.py  test_rich.py
